# verify_nft

./: Anchor.toml  README.md
programs/nft_verify/: Cargo.toml
programs/nft_verify/src/: lib.rs
tests/: nft_verify.ts
